--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "debug": "^4.1.1",
     "get-uv-event-loop-napi-h": "^1.0.5",
     "node-addon-api": "^3.0.0",
-    "node-gyp-build": "^4.2.1",
+    "node-gyp": "^8.1.0",
     "ref-napi": "^2.0.1 || ^3.0.2",
     "ref-struct-di": "^1.1.0"
   },
@@ -40,7 +40,7 @@
     "ref-array-di": "^1.2.1"
   },
   "scripts": {
-    "install": "node-gyp-build",
+    "install": "node-gyp rebuild",
     "test": "node-gyp rebuild --directory test && nyc mocha --expose-gc --reporter spec"
   },
   "repository": {
